--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,3 +1,120 @@
-/*
-    You can add your own custom styles here.
-*/
+/* 1. Define the FIVE correct SVG icons as CSS variables */
+:root {
+    --icon-note: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'%3E%3Cpath d='M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.5 7.75A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75ZM8 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z'%3E%3C/path%3E%3C/svg%3E");
+    --icon-tip: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'%3E%3Cpath d='M8 1.5c-2.363 0-4 1.69-4 3.75 0 .984.424 1.625.984 2.304l.214.253c.223.264.47.556.673.848.284.411.537.896.621 1.49a.75.75 0 0 1-1.484.211c-.04-.282-.163-.547-.37-.847a8.456 8.456 0 0 0-.542-.68c-.084-.1-.173-.205-.268-.32C3.201 7.75 2.5 6.766 2.5 5.25 2.5 2.31 4.863 0 8 0s5.5 2.31 5.5 5.25c0 1.516-.701 2.5-1.328 3.259-.095.115-.184.22-.268.319-.207.245-.383.453-.541.681-.208.3-.33.565-.37.847a.751.751 0 0 1-1.485-.212c.084-.593.337-1.078.621-1.489.203-.292.45-.584.673-.848.075-.088.147-.173.213-.253.561-.679.985-1.32.985-2.304 0-2.06-1.637-3.75-4-3.75ZM5.75 12h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1 0-1.5ZM6 15.25a.75.75 0 0 1 .75-.75h2.5a.75.75 0 0 1 0 1.5h-2.5a.75.75 0 0 1-.75-.75Z'%3E%3C/path%3E%3C/svg%3E");
+    --icon-important: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'%3E%3Cpath d='M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v9.5A1.75 1.75 0 0 1 14.25 13H8.06l-2.573 2.573A1.458 1.458 0 0 1 3 14.543V13H1.75A1.75 1.75 0 0 1 0 11.25Zm1.75-.25a.25.25 0 0 0-.25.25v9.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h6.5a.25.25 0 0 0 .25-.25v-9.5a.25.25 0 0 0-.25-.25Zm7 2.25v2.5a.75.75 0 0 1-1.5 0v-2.5a.75.75 0 0 1 1.5 0ZM9 9a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z'%3E%3C/path%3E%3C/svg%3E");
+    --icon-warning: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'%3E%3Cpath d='M6.457 1.047c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0 1 14.082 15H1.918a1.75 1.75 0 0 1-1.543-2.575Zm1.763.707a.25.25 0 0 0-.44 0L1.698 13.132a.25.25 0 0 0 .22.368h12.164a.25.25 0 0 0 .22-.368Zm.53 3.996v2.5a.75.75 0 0 1-1.5 0v-2.5a.75.75 0 0 1 1.5 0ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z'%3E%3C/path%3E%3C/svg%3E");
+    --icon-caution: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'%3E%3Cpath d='M4.47.22A.749.749 0 0 1 5 0h6c.199 0 .389.079.53.22l4.25 4.25c.141.14.22.331.22.53v6a.749.749 0 0 1-.22.53l-4.25 4.25A.749.749 0 0 1 11 16H5a.749.749 0 0 1-.53-.22L.22 11.53A.749.749 0 0 1 0 11V5c0-.199.079-.389.22-.53Zm.84 1.28L1.5 5.31v5.38l3.81 3.81h5.38l3.81-3.81V5.31L10.69 1.5ZM8 4a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 8 4Zm0 8a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z'%3E%3C/path%3E%3C/svg%3E");
+    --icon-sun: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath d='M12 19a7 7 0 1 1 0-14 7 7 0 0 1 0 14Zm0-1.5a5.5 5.5 0 1 0 0-11 5.5 5.5 0 1 0 0 11Zm-5.657.157a.75.75 0 0 1 0 1.06l-1.768 1.768a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l1.767-1.768a.75.75 0 0 1 1.061 0ZM3.515 3.515a.75.75 0 0 1 1.06 0l1.768 1.768a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L3.515 4.575a.75.75 0 0 1 0-1.06ZM12 0a.75.75 0 0 1 .75.75v2.5a.75.75 0 0 1-1.5 0V.75A.75.75 0 0 1 12 0ZM4 12a.75.75 0 0 1-.75.75H.75a.75.75 0 0 1 0-1.5h2.5A.75.75 0 0 1 4 12Zm8 8a.75.75 0 0 1 .75.75v2.5a.75.75 0 0 1-1.5 0v-2.5A.75.75 0 0 1 12 20Zm12-8a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h2.5A.75.75 0 0 1 24 12Zm-6.343 5.657a.75.75 0 0 1 1.06 0l1.768 1.768a.751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018l-1.768-1.767a.75.75 0 0 1 0-1.061Zm2.828-14.142a.75.75 0 0 1 0 1.06l-1.768 1.768a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042l1.767-1.768a.75.75 0 0 1 1.061 0Z'%3E%3C/path%3E%3C/svg%3E");
+    --icon-moon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath d='M14.768 3.96v.001l-.002-.005a9.08 9.08 0 0 0-.218-.779c-.13-.394.21-.8.602-.67.29.096.575.205.855.328l.01.005A10.002 10.002 0 0 1 12 22a10.002 10.002 0 0 1-9.162-5.985l-.004-.01a9.722 9.722 0 0 1-.329-.855c-.13-.392.277-.732.67-.602.257.084.517.157.78.218l.004.002A9 9 0 0 0 14.999 6a9.09 9.09 0 0 0-.231-2.04ZM16.5 6c0 5.799-4.701 10.5-10.5 10.5-.426 0-.847-.026-1.26-.075A8.5 8.5 0 1 0 16.425 4.74c.05.413.075.833.075 1.259Z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+/* 2. Color schemes */
+:root {
+    --clr-note-bg: #ddf4ff; --clr-note-border: #0969da;
+    --clr-tip-bg: #dff7e7; --clr-tip-border: #2da44e;
+    --clr-important-bg: #e7dcf8; --clr-important-border: #8250df;
+    --clr-warning-bg: #fff8c5; --clr-warning-border: #bb8009;
+    --clr-caution-bg: #ffebe9; --clr-caution-border: #cf222e;
+}
+[data-scheme="dark"] {
+    --clr-note-bg: rgba(56, 139, 253, 0.15); --clr-note-border: #388bfd;
+    --clr-tip-bg: rgba(46, 160, 67, 0.15); --clr-tip-border: #2ea043;
+    --clr-important-bg: rgba(163, 113, 247, 0.15); --clr-important-border: #a371f7;
+    --clr-warning-bg: rgba(187, 128, 9, 0.15); --clr-warning-border: #bb8009;
+    --clr-caution-bg: rgba(248, 81, 73, 0.15); --clr-caution-border: #f85149;
+}
+
+/* 3. General alert styling */
+.alert {
+    padding: 1rem 1.25rem;
+    margin-block: 1.5rem;
+    border-left: 4px solid; /* The border is the only container */
+    color: var(--card-text-color-main);
+    font-size: 16px;
+}
+.alert > p:first-of-type, .alert > .alert-heading + p { margin-top: 0; }
+.alert > p:last-of-type { margin-bottom: 0; }
+.alert-heading {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0 0 0.5rem 0;
+    font-weight: 600;
+    font-size: 0.95em;
+    letter-spacing: normal;
+}
+.alert-heading::before {
+    content: '';
+    display: inline-block;
+    flex-shrink: 0;
+    width: 1em;
+    height: 1em;
+    position: relative;
+    top: -0.05em;
+    -webkit-mask-size: contain; mask-size: contain;
+    -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
+    -webkit-mask-position: center; mask-position: center;
+}
+
+/* 4. Apply icons and colors to each alert type */
+.alert-note { border-color: var(--clr-note-border); }
+.alert-note .alert-heading { color: var(--clr-note-border); }
+.alert-note .alert-heading::before { background-color: var(--clr-note-border); -webkit-mask-image: var(--icon-note); mask-image: var(--icon-note); }
+
+.alert-tip { border-color: var(--clr-tip-border); }
+.alert-tip .alert-heading { color: var(--clr-tip-border); }
+.alert-tip .alert-heading::before { background-color: var(--clr-tip-border); -webkit-mask-image: var(--icon-tip); mask-image: var(--icon-tip); }
+
+.alert-important { border-color: var(--clr-important-border); }
+.alert-important .alert-heading { color: var(--clr-important-border); }
+.alert-important .alert-heading::before { background-color: var(--clr-important-border); -webkit-mask-image: var(--icon-important); mask-image: var(--icon-important); }
+
+.alert-warning { border-color: var(--clr-warning-border); }
+.alert-warning .alert-heading { color: var(--clr-warning-border); }
+.alert-warning .alert-heading::before { background-color: var(--clr-warning-border); -webkit-mask-image: var(--icon-warning); mask-image: var(--icon-warning); }
+
+.alert-caution { border-color: var(--clr-caution-border); }
+.alert-caution .alert-heading { color: var(--clr-caution-border); }
+.alert-caution .alert-heading::before { background-color: var(--clr-caution-border); -webkit-mask-image: var(--icon-caution); mask-image: var(--icon-caution); }
+
+/* Hide the "Dark Mode" text label */
+#dark-mode-toggle span {
+    display: none;
+}
+
+// 1. Hide the original SVG icon provided by the theme.
+#dark-mode-toggle svg {
+    display: none !important;
+}
+
+// 2. Create our new icon using a pseudo-element.
+#dark-mode-toggle::before {
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: currentColor;
+    -webkit-mask-size: contain;
+    mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
+
+    /* 3. Set the default icon to the sun */
+    -webkit-mask-image: var(--icon-sun);
+    mask-image: var(--icon-sun);
+}
+
+// 4. When in dark mode, switch the icon to the moon.
+[data-scheme="dark"] #dark-mode-toggle::before {
+    -webkit-mask-image: var(--icon-moon);
+    mask-image: var(--icon-moon);
+}
+
+/* Remove extra clickable space from the dark mode toggle */
+#dark-mode-toggle {
+    width: fit-content !important;
+    padding-right: 0 !important;
+}
